Attempt to fix OOM error